syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_relation_process_instance;

message DsRelationProcessInstanceBean {

    int32 id=1 ;
    optional int32 parent_process_instance_id=2 ;
    optional int32 parent_task_instance_id=3 ;
    optional int32 process_instance_id=4 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationProcessInstanceBeanService {
  rpc ListDsRelationProcessInstanceBeans(ListDsRelationProcessInstanceBeansRequest) returns (ListDsRelationProcessInstanceBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationProcessInstanceBeans"
    };
  }

  rpc GetDsRelationProcessInstanceBean(GetDsRelationProcessInstanceBeanRequest) returns (DsRelationProcessInstanceBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationProcessInstanceBeans/*}"
    };
  }

  rpc CreateDsRelationProcessInstanceBean(CreateDsRelationProcessInstanceBeanRequest) returns (DsRelationProcessInstanceBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationProcessInstanceBeans"
      body: "DsRelationProcessInstanceBean"
    };
  }

  rpc UpdateDsRelationProcessInstanceBean(UpdateDsRelationProcessInstanceBeanRequest) returns (DsRelationProcessInstanceBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationProcessInstanceBean.name=DsRelationProcessInstanceBeans/*}"
      body: "DsRelationProcessInstanceBean"
    };
  }

  rpc DeleteDsRelationProcessInstanceBean(DeleteDsRelationProcessInstanceBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationProcessInstanceBeans/*}"
    };
  }
}

// message DsRelationProcessInstanceBean {
// ! This should be defined elsewhere
// }

message ListDsRelationProcessInstanceBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationProcessInstanceBeansResponse {
  // The field name should match the noun "DsRelationProcessInstanceBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationProcessInstanceBean DsRelationProcessInstanceBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationProcessInstanceBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationProcessInstanceBeanRequest {
  // The parent resource name where the DsRelationProcessInstanceBean is to be created.
  string parent = 1;

  // The DsRelationProcessInstanceBean id to use for this DsRelationProcessInstanceBean.
  string DsRelationProcessInstanceBean_id = 2;

  // The DsRelationProcessInstanceBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationProcessInstanceBean DsRelationProcessInstanceBean = 3;
}

message UpdateDsRelationProcessInstanceBeanRequest {
  // The DsRelationProcessInstanceBean resource which replaces the resource on the server.
  DsRelationProcessInstanceBean DsRelationProcessInstanceBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationProcessInstanceBeanRequest {
  // The resource name of the DsRelationProcessInstanceBean to be deleted.
  string name = 1;
}
